--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 <body>
     <div class="container">
-        <img src="C:\Users\USER\Desktop\qr-code-component-main\qr-code-component-main\images\image-qr-code.png" alt="">
+        <img src="./images/image-qr-code.png" alt="QR Code">
 
         <div class="text">
             <p>
@@ -74,7 +74,7 @@
     <footer>
         <div class="attribution">
             Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
-            <a href="https://github.com/CodeGod36">CodeGod36</a>.
+            <a href="https://github.com/CodeGod36">CodeGod36</a>
         </div>
     </footer>
 
