fix:added padding

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             background-color: white;
             border-radius: 20px;
             padding: 10px;
-            margin-block: 40px;
+            margin-block: 30%;
         }
     </style>
 </head>
